# misdesign_converter

./: .gitignore  README.md  pyproject.toml
examples/hms1-eclipse/: eclipse_l1_converter.py
examples/hms1-eclipse/components/: hms_eclipse.json
examples/hms1-eclipse/components/line_profiles/: settings.json  sky_line_profile_4861.nc  sky_line_profile_5577.nc  sky_line_profile_6300.nc  sky_line_profile_6563.nc  sol_line_profile_4861.nc  sol_line_profile_5577.nc  sol_line_profile_6300.nc  sol_line_profile_6563.nc
examples/hms1-eclipse/tools/: bounds.csv  editfile.py  generate_line_profile.py  hmsa_eclipse.py  test_4861.py  test_5577.py  test_6300.py  test_6563.py
src/misdesign_converter/: __init__.py  flatfield.py  l1_converter.py  secondary_straightening.py
